--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,16 @@
     ],
     "license" : "MIT",
     "homepage" : "https://github.com/depa-berlin/Middleware-FormularHandler",
+    "config" : {
+        "platform":{"php": "7.2"}
+    },
     "require": {
         "psr/http-server-middleware": "^1.0",
         "psr/container": "^1.0",
         "zendframework/zend-servicemanager": "^3.4",
         "swiftmailer/swiftmailer": "^6.2",
-        "true/punycode": "^2.1"
+        "true/punycode": "^2.1",
+        "zendframework/zend-problem-details": "^1.0"
     },
 
     "authors":      [
