--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "zendframework/zend-servicemanager": "^3.4",
         "swiftmailer/swiftmailer": "^6.2",
         "true/punycode": "^2.1",
-        "zendframework/zend-problem-details": "^1.0"
+        "zendframework/zend-problem-details": "^1.0",
+        "zendframework/zend-json": "^3.1"
     },
 
     "authors":      [
