--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "swiftmailer/swiftmailer": "^6.2",
         "true/punycode": "^2.1",
         "zendframework/zend-problem-details": "^1.0",
-        "zendframework/zend-json": "^3.1"
+        "zendframework/zend-json": "^3.1",
+        "depa/middleware-formularhandler": "^1.0"
     },
 
     "authors":      [
