--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "true/punycode": "^2.1",
         "zendframework/zend-problem-details": "^1.0",
         "zendframework/zend-json": "^3.1",
-        "zendframework/zend-diactoros": "^2.1"
+        "zendframework/zend-diactoros": "^2.1",
+        "twig/twig": "^2.11"
     },
 
     "authors":      [
