--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         }
     },
     "require": {
+        "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
         "psr/http-server-middleware": "^1.0",
         "psr/container": "^1.0",
         "laminas/laminas-servicemanager": "^3.4",
