Added multi adapter functionaility, the handler is now able to use multiple adapters to submit data to different backends.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "marcel-maqsood/mezzio-middleware-formhandler",
-    "description": "The middleware formularhandler is a PSR-15 middleware that provides handling from formular data in a Zend Expressive application",
+    "description": "The middleware formularhandler is a PSR-15 middleware that provides handling from formular data in a Laminas/Mezzio application",
     "keywords": [
         "framework",
         "MazeDEV",
